[package]
name = "bench-async-ringbuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
futures = "0.3.28"
async-ringbuf = { git = "https://github.com/Congyuwang/ringbuf", branch = "master" }
tokio = { version = "1.28.2", features = ["full"] }
